# prospector-extended

./: .gitignore  .pre-commit-config.yaml  .prospector.yaml  .vuln-ignore.yaml  CHANGELOG.md  NEXT_STEPS.md  PROJECT.md  README.md  REQUIREMENTS.md  SECURITY.md  STATUS.md  TODO.md  pyproject.toml  sample-prospector.yaml  vulture_whitelist.py
.session/: session_start.json
.task/: session_state.json  task_info.json
docs/: ARCHITECTURE.md  CODE_REVIEW.md  DEVELOPMENT.md  PATTERNS.md  SUPPRESSIONS.md
docs/design/: infrastructure-alignment.md  metrics-integration.md
src/prospector_extended/: __init__.py  cli.py
src/prospector_extended/parsing/: __init__.py  models.py  registry.py
src/prospector_extended/schemas/: mypy_v1.json
src/prospector_extended/tools/: __init__.py  base.py  complexipy_tool.py  interrogate_tool.py  mypy_tool.py  vulture_tool.py
tasks/: _index.md
tasks/phase-1/: 1.00-infrastructure-design.md  1.01-gitignore-scaffolding.md  1.03-pyproject-overhaul.md  1.05-pre-commit-config.md  1.07-prospector-yaml-align.md  1.09-vulture-whitelist.md
tasks/phase-2/: 2.01-project-requirements.md  2.03-changelog-security.md  2.05-dev-docs.md  2.07-state-files.md
tasks/phase-3/: 3.01-fix-quality-violations.md  3.03-test-cli.md  3.05-test-vulture-tool.md  3.07-test-base-tool.md  3.09-test-error-paths.md
tasks/phase-4/: 4.01-metrics-output-infrastructure.md  4.03-radon-tool.md  4.05-structure-tool.md  4.07-complexipy-metrics.md  4.09-interrogate-metrics.md  4.11-vulture-metrics.md  4.13-suppression-duplication-metrics.md  4.15-metrics-integration-tests.md
tests/: conftest.py  test_base_tool.py  test_cli.py  test_complexipy_tool.py  test_interrogate_tool.py  test_mypy_tool.py  test_parsing.py  test_vulture_tool.py
tests/fixtures_exempt/: clean.py  dead_code.py  high_complexity.py  missing_docstrings.py  type_errors.py  whitelist_fixture.py
