# =============================================================================
# PROJECT METADATA
# =============================================================================
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "prospector-extended"
version = "0.1.0"
description = "Extended Prospector with improved mypy, complexipy, and interrogate tools"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.12"
authors = [{ name = "Prospector Contributors" }]
keywords = [
    "prospector",
    "mypy",
    "complexipy",
    "interrogate",
    "static-analysis",
    "type-checking",
    "cognitive-complexity",
    "docstring-coverage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # Core aggregator
    "prospector[with_bandit,with_vulture,with_ruff]>=1.10.0",
    # Type checking (mypy only - pyright dropped)
    "mypy>=1.10.0",
    # Cognitive complexity
    "complexipy>=0.4.0",
    # Docstring coverage
    "interrogate>=1.5.0",
    # Parsing infrastructure
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "poethepoet>=0.24.0",
    "ruff>=0.8.0",
    "types-jsonschema>=4.0.0",  # mypy stubs for jsonschema
]

[project.scripts]
prospector-extended = "prospector_extended.cli:main"
# Convenience alias
pex = "prospector_extended.cli:main"

[project.urls]
Homepage = "https://github.com/prospector-dev/prospector"
Documentation = "https://prospector.landscape.io/"

# =============================================================================
# BUILD CONFIGURATION
# =============================================================================
[tool.hatch.build.targets.wheel]
packages = ["src/prospector_extended"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/.prospector.yaml"]

# =============================================================================
# POE TASKS
# =============================================================================
[tool.poe.tasks]
test = "pytest"
test-coverage = "pytest --cov=src/prospector_extended --cov-report=term-missing --cov-report=json"
checks = "prospector-extended --output-format json src/"
format = "ruff format src/ tests/"
lint = "ruff check src/ tests/"
lint-fix = "ruff check --fix src/ tests/"

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

# =============================================================================
# RUFF - Linting & Formatting
# =============================================================================
[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    # Core
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort

    # Code quality
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "ARG",    # flake8-unused-arguments

    # Complexity & Design
    "C90",    # mccabe (cyclomatic complexity)
    "PLR",    # pylint refactor (branches, args, returns, etc.)

    # Documentation
    "D",      # pydocstyle
]

ignore = [
    "D100",   # Missing docstring in public module
    "D104",   # Missing docstring in public package
    "D107",   # Missing docstring in __init__
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "D",      # don't require docstrings in tests
    "ARG",    # unused args common in fixtures
    "PLR2004", # magic values in tests are fine
]

# =============================================================================
# MYPY - Type Checking (strict mode)
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Additional strict checks
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_equality = true
strict_concatenate = true

# Import handling
ignore_missing_imports = false
follow_imports = "normal"

[[tool.mypy.overrides]]
module = [
    "complexipy.*",
    "interrogate.*",
    "prospector.*",
]
ignore_missing_imports = true

# =============================================================================
# INTERROGATE - Docstring Coverage
# =============================================================================
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["tests", "docs", "build"]
verbose = 0
quiet = false
color = true
omit-covered-files = false

# =============================================================================
# COMPLEXIPY - Cognitive Complexity
# =============================================================================
[tool.complexipy]
max_complexity = 15

# =============================================================================
# BANDIT - Security
# =============================================================================
[tool.bandit]
exclude_dirs = ["tests", "docs"]
skips = []

# =============================================================================
# VULTURE - Dead Code
# =============================================================================
[tool.vulture]
min_confidence = 80
paths = ["src"]
exclude = ["tests"]
# Whitelist: dataclass fields used in public API
ignore_names = ["schema_name", "raw", "reason"]

# =============================================================================
# PYLINT - Duplicate Code Only
# =============================================================================
[tool.pylint.main]
disable = "all"
enable = "duplicate-code"

[tool.pylint."messages control"]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true
ignore-imports = true
