# =============================================================================
# PROJECT METADATA
# =============================================================================
[project]
name = "prospector-extended"
version = "0.2.0"
description = "Extended Prospector with improved mypy, vulture (whitelist support), complexipy, and interrogate tools"
readme = "README.md"
license = "GPL-2.0-or-later"
requires-python = ">=3.12"
authors = [{ name = "Prospector Contributors" }]
keywords = [
    "prospector",
    "mypy",
    "complexipy",
    "interrogate",
    "static-analysis",
    "type-checking",
    "cognitive-complexity",
    "docstring-coverage",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
]

dependencies = [
    # Core aggregator (brings bandit, vulture, ruff as runtime deps)
    "prospector[with_bandit,with_vulture,with_ruff]>=1.10.0",
    # Type checking (mypy only - pyright dropped)
    "mypy>=1.10.0",
    # Cognitive complexity
    "complexipy>=0.4.0",
    # Docstring coverage
    "interrogate>=1.5.0",
    # Parsing infrastructure
    "pydantic>=2.0.0",
    "jsonschema>=4.0.0",
]

[project.scripts]
prospector-extended = "prospector_extended.cli:main"
# Convenience alias
pex = "prospector_extended.cli:main"

[project.urls]
Repository = "https://github.com/scriptedworld/prospector-extended"

[tool.uv]
python-preference = "only-system"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

# =============================================================================
# DEPENDENCY GROUPS
# =============================================================================
[dependency-groups]
dev = [
    # Note: bandit, vulture, ruff are already runtime deps via prospector extras
    "commitizen>=4.12.0",
    "pdoc>=16.0.0",
    "poethepoet>=0.40.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-json-report>=1.5.0",
    "ruff>=0.14.0",
    "types-jsonschema>=4.0.0",  # mypy stubs for jsonschema
]

# =============================================================================
# PYTEST
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--strict-config",
    "--cov=src",
    "--cov-branch",
    "--cov-report=term-missing",
    "--cov-report=json:.task/coverage.json",
    "--cov-report=xml:.task/coverage.xml",
    "--json-report",
    "--json-report-file=.task/test_results.json",
    "--junitxml=.task/test_results.xml",
]
pythonpath = ["src"]
markers = [
    "slow: marks tests that run real subprocess pipelines (deselect with '-m \"not slow\"')",
]

# =============================================================================
# COVERAGE
# =============================================================================
[tool.coverage.run]
branch = true
source = ["src"]
omit = ["*/__pycache__/*"]  # tests already excluded via source = ["src"]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",            # Explicit exclusion marker for intentionally uncovered code
    "if TYPE_CHECKING:",           # Type-only imports never execute at runtime
    "if __name__ == .__main__.:",  # Script entry points not covered when imported as module
    "raise NotImplementedError",   # Abstract method stubs meant to be overridden
]

# =============================================================================
# RUFF - Linting & Formatting
# =============================================================================
[tool.ruff]
target-version = "py312"
line-length = 150
src = ["src", "tests"]
exclude = [".git", ".venv", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = [
    "E", "F", "W", "I", "UP", "B", "SIM", "C4", "C90",
    "N", "D", "T20", "RET", "PTH", "ERA", "PL", "RUF",
    "ARG",    # flake8-unused-arguments (kept from original, not in template)
]
ignore = ["D100", "D104", "D107"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 6
max-branches = 12
max-returns = 6
max-statements = 50

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLR2004",  # Magic value in comparison - test assertions often compare to literal values
    "PLW1510",  # subprocess.run without check=True - tests may intentionally check returncode
    "D",        # All docstring rules - test functions are self-documenting by name
    "PLC0415",  # import outside top-level - tests may do conditional/local imports for isolation
    "ARG",      # unused args common in fixtures
    "F401",     # unused imports - test files may import for side effects or fixtures
    "F841",     # unused local variable - intermediate assignments for readability
]
"tests/fixtures_exempt/**/*.py" = [
    "ALL",      # Fixture files intentionally contain bad code for testing tools
]
"vulture_whitelist.py" = [
    "B018",  # Found useless expression - whitelist files intentionally reference unused names
]
# Source files with intentional deferred imports (optional deps, circular avoidance)
"src/prospector_extended/cli.py" = ["PLC0415"]
"src/prospector_extended/tools/complexipy_tool.py" = ["PLC0415"]
"src/prospector_extended/tools/interrogate_tool.py" = ["PLC0415"]
"src/prospector_extended/tools/mypy_tool.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true
docstring-code-line-length = 100

# =============================================================================
# MYPY - Type Checking (strict mode)
# =============================================================================
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
show_error_codes = true
files = ["src"]
exclude = ["tests", "__pycache__", ".venv"]

# Mypy overrides - untyped third-party libraries
[[tool.mypy.overrides]]
module = [
    "complexipy",
    "complexipy.*",
    "interrogate",
    "interrogate.*",
    "prospector",
    "prospector.*",
    "vulture",
    "vulture.*",
]
ignore_missing_imports = true  # These libraries have no type stubs or py.typed marker

# =============================================================================
# BANDIT - Security
# =============================================================================
[tool.bandit]
targets = ["src"]
exclude_dirs = ["tests", ".venv", "__pycache__"]

# =============================================================================
# VULTURE - Dead Code
# =============================================================================
[tool.vulture]
paths = ["src"]
exclude = ["tests", ".venv", "__pycache__"]
min_confidence = 80
# Whitelist: dataclass fields used in public API
ignore_names = ["schema_name", "raw", "reason"]

# =============================================================================
# PYLINT - Duplicate Code Only
# =============================================================================
[tool.pylint.main]
disable = "all"  # Disable all checks - ruff handles most linting
enable = ["duplicate-code"]  # Only enable duplicate-code detection (ruff lacks this)
ignore = ["tests", ".venv", "__pycache__"]

[tool.pylint.similarities]
min-similarity-lines = 4
ignore-comments = true
ignore-docstrings = true
ignore-imports = true

# =============================================================================
# INTERROGATE - Docstring Coverage
# =============================================================================
[tool.interrogate]
ignore-init-method = true
ignore-init-module = true
ignore-magic = true
ignore-semiprivate = false
ignore-private = true
ignore-property-decorators = true
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["tests", "docs", "build"]
verbose = 0

# =============================================================================
# COMPLEXIPY - Cognitive Complexity
# =============================================================================
[tool.complexipy]
max_complexity = 15

# =============================================================================
# COMMITIZEN
# =============================================================================
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "v$version"
version_files = [
    "pyproject.toml:version",
    "src/prospector_extended/__init__.py:__version__",
]

# =============================================================================
# POE TASKS
# =============================================================================
[tool.poe.tasks]
sync-setup = [
    { cmd = "uv sync" },
    { shell = "uv pip install vendor/*.whl 2>/dev/null || true" },
]
ensure-hooks = [
    { cmd = "pre-commit install" },
    { cmd = "pre-commit install --hook-type commit-msg" },
    { cmd = "pre-commit install --hook-type pre-push" },
]
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"

test = "pytest --no-cov -m 'not slow'"
test-cov = "pytest -m 'not slow'"
test-slow = "pytest --no-cov -m slow"
test-all = "pytest"
validate-coverage = { shell = "uv run python .claude/scripts/validate_coverage.py .task/coverage.json --output human" }
test-coverage = ["test-cov", "validate-coverage"]

lint = "ruff check src/ tests/"
lint-fix = "ruff check --fix src/ tests/"
types = "mypy src/"
security = "bandit -r src/ -f json -o .task/bandit.json || true"
xray = "xray-audit"

quality = { shell = "prospector-extended src/ --output-format json | tee .task/quality.json" }

checks = ["test-coverage", "format-check", "quality"]

docs = "pdoc --output-dir docs/api src/prospector_extended"

clean = "rm -rf .task/*.json .task/*.xml .pytest_cache .coverage .mypy_cache .ruff_cache .complexipy_cache"
